--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "jquery": "^3.6.0"
+    "gsap": "^3.8.0",
+    "jquery": "^3.6.0",
+    "slick-slider": "^1.8.2"
   }
 }
